# xboy

./: .gitignore  CMakeLists.txt  PHASE1_IMPLEMENTATION.md  PHASE2_COMPACT.md  PHASE2_COMPLETE.md  README.md  WEBASM_PLAN.md  WEBSSEMBLY_COMPLETE.md  bindings.cpp  build_native.sh  build_web.sh
.github/workflows/: ci.yml  deploy-web.yml  release.yml
kaitai-struct/: Makefile  cartridge-header.ksy
src/: main.cpp  web_main.cpp
src/apu/: apu.cpp  apu.hpp  channel1.cpp  channel1.hpp  channel2.cpp  channel2.hpp  channel3.cpp  channel3.hpp  channel4.cpp  channel4.hpp
src/cpu/: cpu.cpp  cpu.hpp  interrupts.hpp  opcodes.cpp  registers.hpp
src/debugger/: debugger.cpp  debugger.hpp  disassembler.cpp  disassembler.hpp
src/input/: joypad.cpp  joypad.hpp
src/kaitai-struct-gen/: cartridge-header.cpp  cartridge-header.h
src/mmu/: linear-memory.cpp  linear-memory.hpp  memory.cpp  memory.hpp  mmunit.cpp  mmunit.hpp
src/mmu/cartridge/: cartridge.cpp  cartridge.hpp  mbc1.hpp  mbc3.hpp  mbc5.hpp  rom-only-cartridge.hpp
src/platform/: sdl_audio.cpp  sdl_audio.hpp  sdl_display.cpp  sdl_display.hpp  sdl_input.cpp  sdl_input.hpp  web_audio.cpp  web_audio.hpp  web_display.cpp  web_display.hpp  web_filesystem.cpp  web_filesystem.hpp  web_input.cpp  web_input.hpp
src/ppu/: ppu.cpp  ppu.hpp
src/state/: save_state.cpp  save_state.hpp  serializable.hpp
src/test_runner/: headless_runner.cpp  headless_runner.hpp
src/timer/: timer.cpp  timer.hpp
test/cpu/: cpu.test.cpp
test/kaitai-struct-gen/: cartridge-header.test.cpp  tetris.dump.hpp
test/mmu/: linear-memory.test.cpp  mbc3.test.cpp  mbc5.test.cpp
web/: README.md  index.html
web/css/: xboy.css
web/js/: controls.js  rom-loader.js  save-states.js  xboy-wasm.js  xboy-wasm.wasm  xboy.js
